@@ -1,1 +1,0 @@
-tasksel_1.0-3_i386.deb base optional
