@@ -1,7 +1,8 @@
-/* $Id: tasksel.h,v 1.1 1999/11/21 22:01:04 tausq Exp $ */
+/* $Id: tasksel.h,v 1.2 2000/04/22 00:52:33 tausq Rel $ */
 #ifndef _TASKSEL_H
 #define _TASKSEL_H
 
 void help(void);
+void tasksel_signalhandler(int sig);
 
 #endif
